--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,8 +10,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
-    # makes classes in src/ available to be used as services
+        
+    # Define the LivraisonService
+    App\Service\LivraisonService:   # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
@@ -20,5 +21,6 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Service for the Commande class
+    App\Entity\Commande:
+        # You can define any specific configurations here if needed
