--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "dompdf/dompdf": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
+        "stripe/stripe-php": "^14.4",
         "symfony/asset": "5.4.*",
         "symfony/asset-mapper": "6.3.0",
         "symfony/console": "5.4.*",
